[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.ImmigrationCourtEnteringRepresentation"
version = "1.0"
description = "Form EOIR-28, OMB#1125-0006"
readme = "README.md"
authors = [
    { name = "Peter Samson", email = "peter.samson@su.suffolk.edu" },
]
dependencies = [
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
]

[project.urls]
Homepage = "https://courtformsonline.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
